--- a/02-setup-fonk/package.json
+++ b/02-setup-fonk/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "formik-and-fonk",
+  "name": "fomik-and-fonk",
   "version": "1.0.0",
   "description": "Examples using Formik and Fonk",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@lemoncode/fonk": "^1.3.0",
+    "@lemoncode/fonk-final-form": "^2.3.1",
     "formik": "^2.0.6",
     "react": "16.8.6",
     "react-dom": "16.8.6",
