--- a/02-setup-fonk/package.json
+++ b/02-setup-fonk/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@lemoncode/fonk": "^1.3.0",
     "@lemoncode/fonk-final-form": "^2.3.1",
+    "@lemoncode/fonk-iban-validator": "^1.0.0",
+    "@lemoncode/fonk-range-number-validator": "^1.1.0",
     "formik": "^2.0.6",
     "react": "16.8.6",
     "react-dom": "16.8.6",
