--- a/02-setup-fonk/package.json
+++ b/02-setup-fonk/package.json
@@ -6,10 +6,12 @@
   "main": "src/index.js",
   "dependencies": {
     "@lemoncode/fonk": "^1.3.0",
-    "@lemoncode/fonk-final-form": "^2.3.1",
+    "@lemoncode/fonk-formik": "^4.0.1",
     "@lemoncode/fonk-iban-validator": "^1.0.0",
     "@lemoncode/fonk-range-number-validator": "^1.1.0",
     "formik": "^2.0.6",
+    "install": "^0.13.0",
+    "npm": "^6.13.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "3.0.1"
