--- a/03-custom-sync-validator/package.json
+++ b/03-custom-sync-validator/package.json
@@ -6,7 +6,7 @@
   "main": "src/index.js",
   "dependencies": {
     "@lemoncode/fonk": "^1.3.0",
-    "@lemoncode/fonk-final-form": "^2.3.1",
+    "@lemoncode/fonk-formik": "^4.0.1",
     "@lemoncode/fonk-iban-validator": "^1.0.0",
     "@lemoncode/fonk-range-number-validator": "^1.1.0",
     "formik": "^2.0.6",
